nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-10-20T13:48:16Z"
  labels:
    app: nginx-deployment
  name: nginx-deployment
  namespace: nginx-test
  resourceVersion: "1430"
  uid: c5fa408c-a51e-4e33-ba24-1c34940ffc7a
spec:
  clusterIP: 10.43.172.237
  clusterIPs:
  - 10.43.172.237
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
